--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "SILENT-SOBX-MD",
+  "name": "SHAHZAR-KHAN-MD",
   "version": "1.0.0",
   "description": "A WhatsApp bot created using Node.js",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 start index.js --deep-monitoring --attach --name SILENT-SOBX-MD",
-    "stop": "pm2 stop SILENT-SOBX-MD",
-    "restart": "pm2 restart SILENT-SOBX-MD"
+    "start": "pm2 start index.js --deep-monitoring --attach --name SHAHZAR-KHAN-MD",
+    "stop": "pm2 stop SHAHZAR-KHAN-MD",
+    "restart": "pm2 restart SHAHZAR-KHAN-MD"
   },
   "dependencies": {
         "@adiwajshing/keyed-db": "^0.2.4",
